# ycla_ai_chat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_ycla-ai-api.yml
app/: __init__.py  celery_worker.py  clients.py  config.py  database.py  dependencies.py  endpoints.py  models.py  schemas.py  tasks.py  utils.py
migrations/: env.py
migrations/versions/: f75c0afacc12_initial_migration.py  fae691487b2f_initial_migration.py
