[project]
name = "ycla-ai"
version = "0.1.0"
description = "Chatting api"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "bs4>=0.0.2",
    "docx2txt>=0.9",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "langchain>=0.3.23",
    "loguru>=0.7.3",
    "openai>=1.73.0",
    "pinecone>=6.0.2",
    "pycurl>=7.45.6",
    "pydantic>=2.11.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "shortuuid>=1.0.13",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
